<resources>
    <string name="app_name">Mender</string>
    <string name="welcome_to_mender">Welcome to Mender</string>
    <string name="button">Button</string>
    <string name="click_me">Click me</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="mender">Mender</string>
    <string name="you_made_a_second_page">You made a second page!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signup">MyAndroidApp</string>
    <string name="country_prompt">Choose a State</string>
    <string-array name="state_arrays">
        <item>WA</item>
        <item>HA</item>
    </string-array>
    <string name="What_we_do"></string>
    <string name="icon_email">&#xe818;</string>
    <string name="icon_lock">&#xe80f;</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="take_picture">Take Picture</string>
    <string name="edit_receipts">Edit Receipts</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="admin">Admin</string>
    <string name="Account">Account</string>
    <string name="rate">Rates</string>
    <string name="tou4">In order to provide increased value to you, our visitors, the Application might provide links to other sites on the Internet that are owned and operated by third parties and are not affiliated with us. Such linked applications are independent from Mender Services, and Mender Services has no control over the content of such websites. Therefore, Mender Services cannot be held liable and makes no warranty or representation in any way as to the accuracy, timeliness and/or completeness of the information contained on such applications or websites.</string>
    <string name="tos_1">Please read these Terms of Service (“Terms”, “Terms of Service”) carefully before using this app (the “Service”) operated by Mender Services (“us”, “we”, or “our”).</string>
    <string name="tos_2">Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms of Service apply to all visitors, users and others who access or use the Service. By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms, then you may not access the Service.</string>
    <string name="h1">Purchases</string>
    <string name="tos_3">If you wish to purchase any product or service made available through the Service (“Purchase”) you may be asked to supply certain information relevant to your Purchase including: name, email address, mailing address, credit card information, billing address.</string>
    <string name="tos_4">You represent and warrant that: You have the legal right to use any credit card(s) or other payment method(s) in connection with any Purchase, the information you supply to us is true, correct and complete. You expressly agree that Mender Services is not responsible for any loss or damage arising from the submission of false or inaccurate information.</string>
    <string name="tos_5">By submitting such information, you grant us the right to provide the information provided to third parties for purposes of facilitating the completion of Purchases.</string>
    <string name="tos_6">We reserve the right to refuse or cancel your order at any time for certain reasons including but not limited to: product or service availability, errors in the product or service description or price, error in your order or other reasons. You expressly agree that Mender Services cannot accept any liability for loss or damage arising out of such cancellation. We reserve the right to refuse or cancel your order if we suspect fraud or an unauthorized or illegal transaction.</string>
    <string name="h2">Availability, Errors and Inaccuracies</string>
    <string name="tos_7">We are constantly updating our offerings of products and services on the Service. The products or services available on our Service may be mispriced, described inaccurately, or unavailable, and we may experience delays in updating information on the Service. You expressly agree that any such offer of a product or service does not constitute a legal offer capable of attracting legal consequences.</string>
    <string name="tos_8">We cannot and do not guarantee the accuracy or completeness of any information, including prices, product images, specifications, availability, and services. We reserve the right to change or update information and to correct errors, inaccuracies, or omissions at any time without prior notice.</string>
    <string name="h3">Accounts</string>
    <string name="tos_9">When you create an account with us, you must provide us information that is accurate, complete, and current at all times. Failure to do so constitutes a breach of the Terms of Service, which may result in immediate termination of your account on our Service.</string>
    <string name="tos_10">You are responsible for safeguarding the password that you use to access the Service and for any activities or actions under your password, whether your password is with our Service or a third-party service.</string>
    <string name="tos_11">You agree not to reveal your password to any third party. You must notify us immediately upon becoming aware of any breach of security or unauthorized use of your account.</string>
    <string name="h4">Intellectual Property</string>
    <string name="tos_12">The Service and its original content, features and functionality are and will remain the exclusive property of Mender Services and its licensors. The Service is protected by copyright, trademark, and other laws of both the United States and foreign countries. Our trademarks may not be used in connection with any product or service without the prior written consent of Mender Services.</string>
    <string name="h5">Links to Other Web Sites</string>
    <string name="tos_13">Our Service may contain links to third-party web sites or services that are not owned or controlled by Mender Services. We have no control over any website we are linked to so we cannot be responsible for safeguarding any information which you provide such sites and this privacy statement does not govern such sites. Caution should be exercised when visiting linked websites and the privacy statement of the website in question should be examined.</string>
    <string name="tos_14">Mender Services has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Mender Services shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services. We strongly advise you to read the terms of service and privacy policies of any third-party web sites or services that you visit.</string>
    <string name="h6">Termination</string>
    <string name="tos_15">We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</string>
    <string name="tos_16">Upon termination, your right to use the Service will immediately cease. If you wish to terminate your account, you may simply discontinue using the Service.</string>
    <string name="tos_17">All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability.</string>
    <string name="h7">Limitation of Liability</string>
    <string name="tos_18">In no event shall Mender Services, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from your access to or use of or inability to access or use the Service, any conduct or content of any third party on the Service, any content obtained from the Service, unauthorized access, use or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence) or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.</string>
    <string name="h8">Disclaimer</string>
    <string name="tos_19">Your use of the Service is at your sole risk. The Service is provided on an “as is” and “as available” basis. The Service is provided without warranties of any kind, whether express or implied, including, but not limited to, implied warranties of merchantability, fitness for a particular purpose, non-infringement or course of performance</string>
    <string name="tos_20">Mender Services, its subsidiaries, affiliates, and its licensors do not warrant that: the Service will function uninterrupted, secure or available at any particular time or location, any errors or defects will be corrected, the Service is free of viruses or other harmful components, the results of using the Service will meet your requirements.</string>
    <string name="h9">Exclusions</string>
    <string name="tos_21">Without limiting the generality of the foregoing and notwithstanding any other provision of these terms, under no circumstances will Mender Services ever be liable to you or any other person for any indirect, incidental, consequential, special, punitive or exemplary loss or damage arising from, connected with, or relating to your use of the Service, these Terms, the subject matter of these Terms, the termination of these Terms or otherwise, including but not limited to personal injury, loss of data, business, markets, savings, income, profits, use, production, reputation or goodwill, anticipated or otherwise, or economic loss, under any theory of liability regardless of any negligence or other fault or wrongdoing (including without limitation gross negligence and fundamental breach) by Mender Services or any person for whom Mender Services is responsible, and even if Mender Services has been advised of the possibility of such loss or damage being incurred.</string>
    <string name="h10">Governing Law</string>
    <string name="tos_22">These Terms shall be governed and construed in accordance with the laws of United States without regard to its conflict of law provisions. Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</string>
    <string name="h11">Changes</string>
    <string name="tos_23">These Terms shall be governed and construed in accordance with the laws of United States without regard to its conflict of law provisions. Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</string>
    <string name="h12">Contact Us</string>
    <string name="tos_24">If you have any questions about these Terms, please contact us.</string>
</resources>