<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.app.handyman.mender.misc.AboutUs">

    <include
        android:id="@+id/lin"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_1"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_2"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h1"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_3"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tou4"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_4"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_5"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />


            <TextView
                android:id="@+id/t8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_6"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />


            <TextView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h2"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_7"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_8"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h3"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_9"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_10"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_11"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h4"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_12"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h5"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_13"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_14"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h6"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_15"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_16"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_17"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h7"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_18"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h8"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tos_19"
                android:padding="10dp"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tos_20"
                android:padding="10dp"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h9"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_21"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h10"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_22"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/t34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h11"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_23"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/h12"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tos_24"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/t38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Last Edited on : 12/16/2017"
                android:textColor="@color/primary_text_color"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
